[package]
name = "zera_bridge_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
time = "=0.3.36"
blake3 = "=1.5.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]