[package]
name = "zera_bridge_token_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
mpl-token-metadata = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
